--- a/PlayWrightPOM/PlayWrightPOM.csproj
+++ b/PlayWrightPOM/PlayWrightPOM.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="TestData\" />
+  </ItemGroup>
+
 </Project>
