--- a/PlayWrightPOM/PlayWrightPOM.csproj
+++ b/PlayWrightPOM/PlayWrightPOM.csproj
@@ -10,6 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ExcelDataReader" Version="3.6.0" />
+    <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="Microsoft.Playwright.NUnit" Version="1.40.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
@@ -19,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Screenshots\" />
     <Folder Include="TestData\" />
   </ItemGroup>
 
